fix(SaleHeaderBanner): L3-5179 fix spacing of sale header banner footer elements (#487)

--- a/src/patterns/SaleHeaderBanner/_saleHeaderBanner.scss
+++ b/src/patterns/SaleHeaderBanner/_saleHeaderBanner.scss
@@ -63,12 +63,12 @@
       }
 
       &:first-child {
-        padding-right: $spacing-xsm;
+        padding-right: $spacing-sm;
       }
 
       &:not(:first-child) {
         border-left: 1px solid $keyline-gray;
-        padding-left: $spacing-xsm;
+        padding-left: $spacing-sm;
       }
     }
   }
